[package]
name = "rust-driver"
version = "0.1.0"
authors = ["Piotr Sarna <sarna@scylladb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hyper is an asynchronous HTTP library. We'll use it to power our HTTP
# server and to make HTTP requests.
hyper = "0.13"
# To setup some sort of runtime needed by Hyper, we will use the Tokio runtime.
tokio = { version = "0.2.21", features = ["full"] }
futures = { version = "0.3.5" }
tokio-util = { version = "0.3.1" }
serde = { version = "1.0.112", features = ["derive"] }
bincode = { version = "1.2.1" }
bytes = { version = "0.5.5" }

# (only for testing)
anyhow = "1.0.31"
